--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src= "/img/logo/cbrlogo.png" 
           alt="" width="200" height="100">
             </a>
-            <a href="/" class="text-decoration-none text-white fs-5 font-weight-bold">WEDDINGS | MATERNITY | EVENTS | PRODUCTS</a>
+            <!-- <a href="/" class="text-decoration-none text-white fs-5 font-weight-bold">WEDDINGS | MATERNITY | EVENTS | PRODUCTS</a> -->
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                   <!-- <a class="navbar-brand" href="#">Navbar</a> -->
