--- a/index.html
+++ b/index.html
@@ -335,7 +335,9 @@
             </div>
 
             <div class=" text-left mt-5 ">
-                <p>Have questions, ideas, or ready to book your session? Reach out to us today! Our friendly team is here to assist you every step of the way. Let's connect and turn your photographic dreams into reality. Fill out the form below or reach us directly via phone <a href=“tel:9650247027”>+919650247027</a> or email (clicksbyrohan@gmail.com). We can't wait to hear from you!</p>
+                <p>Have questions, ideas, or ready to book your session? Reach out to us today! Our friendly team is here to assist you every step of the way. Let's connect and turn your photographic dreams into reality.</p>
+
+                <p>Fill out the form below or reach us directly via phone <a href=“tel:9650247027”>+919650247027</a> or email (clicksbyrohan@gmail.com). We can't wait to hear from you!</p>
             </div>
             <div class="row ">
                 <div class="col-lg-7 mx-auto">
